src/test/resources/invalid/semanticErr/extra/array/indicesNotInt.wacc
begin

int[] arr = [1,2,3];
int a = arr['c'];
exit a

end